send & receive new messages

--- a/rebar.config
+++ b/rebar.config
@@ -5,9 +5,8 @@
 
 % Dependencies
 {deps, [
-	{etest, ".*", {git, "git://github.com/wooga/etest.git"}},
-	{etest_http, "", {git, "git://github.com/wooga/etest_http.git"}},
-	{bullet, "", {git, "git://github.com/extend/bullet.git"}}
+	{bullet, "", {git, "git://github.com/extend/bullet.git"}},
+	{jiffy, "", {git, "git://github.com/davisp/jiffy.git"}}
 ]}.
 
 % Which files to cleanup when rebar clean is executed.
