improved mnesia startup, compile and start docs

--- a/rebar.config
+++ b/rebar.config
@@ -3,6 +3,8 @@
 	{src_dirs, ["src", "test"]}
 ]}.
 
+{sub_dirs, ["rel"]}.
+
 % Dependencies
 {deps, [
 	{bullet, "", {git, "git://github.com/extend/bullet.git"}},
