cleaned rebar.config

--- a/rebar.config
+++ b/rebar.config
@@ -1,9 +1,7 @@
 % Compiler Options for rebar
 {erl_opts, [
-	{src_dirs, ["src", "test"]}
+	{src_dirs, ["src"]}
 ]}.
-
-{sub_dirs, ["rel"]}.
 
 % Dependencies
 {deps, [
