--- a/rebar.config
+++ b/rebar.config
@@ -5,8 +5,8 @@
 
 % Dependencies
 {deps, [
-	{bullet, "", {git, "git://github.com/extend/bullet.git"}},
-	{jiffy, "", {git, "git://github.com/davisp/jiffy.git"}}
+	{bullet, ".*", {git, "git://github.com/extend/bullet.git"}},
+	{jiffy, ".*", {git, "git://github.com/davisp/jiffy.git"}}
 ]}.
 
 % Which files to cleanup when rebar clean is executed.
