Specify dependency versions

--- a/rebar.config
+++ b/rebar.config
@@ -4,10 +4,8 @@
 ]}.
 
 % Dependencies
-{deps, [
-	{bullet, ".*", {git, "git://github.com/extend/bullet.git"}},
-	{jiffy, ".*", {git, "git://github.com/davisp/jiffy.git"}}
-]}.
+{deps, [{bullet, ".*", {git, "git://github.com/extend/bullet.git", {tag, "0.4.1"}}},
+        {jiffy, ".*", {git, "git://github.com/davisp/jiffy.git", {tag, "0.8.5"}}]}.
 
 % Which files to cleanup when rebar clean is executed.
 {clean_files, ["ebin/*.beam"]}.
