Fix rebar.config syntax error

--- a/rebar.config
+++ b/rebar.config
@@ -5,7 +5,7 @@
 
 % Dependencies
 {deps, [{bullet, ".*", {git, "git://github.com/extend/bullet.git", {tag, "0.4.1"}}},
-        {jiffy, ".*", {git, "git://github.com/davisp/jiffy.git", {tag, "0.8.5"}}]}.
+        {jiffy, ".*", {git, "git://github.com/davisp/jiffy.git", {tag, "0.8.5"}}}]}.
 
 % Which files to cleanup when rebar clean is executed.
 {clean_files, ["ebin/*.beam"]}.
